--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <img class="team-pic" src="images/images/Helga Gaona.jpeg">
                 <h2>Helga</h2>
                 <p><strong>Rol:</strong> Diseño UI/UX</p>
-                <p><strong>Email:</strong> <a class="mail" href="mailto:helga@dexi.com">helga@dexi.com</a></p>
+                <p><strong>Email:</strong> <a class="mail" href="mailto:helga@dexi.com">helga@duxistudio.com</a></p>
             </div>
             <div class="member">
                  <img class="team-pic" src="images/images/kim.png">
