--- a/about.html
+++ b/about.html
@@ -33,13 +33,13 @@
                  <img class="team-pic" src="images/images/kim.png">
                 <h2>Kim Josell</h2>
                 <p><strong>Rol:</strong> Programación & Base de Datos</p>
-                <p><strong>Email:</strong> <a class="mail" href="mailto:kim@dexi.com">kim@dexi.com</a></p>
+                <p><strong>Email:</strong> <a class="mail" href="mailto:kim@dexi.com">kim@duxistudio.com</a></p>
             </div>
             <div class="member">
                 <img class="team-pic" src="images/images/angelo.png">
                 <h2>Angelo</h2>
                 <p><strong>Rol:</strong> Programación</p>
-                <p><strong>Email:</strong> <a class="mail" href="mailto:angelo@dexi.com">angelo@dexi.com</a></p>
+                <p><strong>Email:</strong> <a class="mail" href="mailto:angelo@dexi.com">angelo@duxistudio.com</a></p>
             </div>
         </section>
     </main>
