--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="form">
             <h1>Contáctanos</h1>
-            <label for="name">Nombre:</label>
+            <label for="name">Nombre Completo:</label>
             <input type="text" id="name" name="name" required>
 
             <label for="email">Email:</label>
