--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <title>Home Page</title>
 
 
@@ -37,6 +38,7 @@
           <a href="services.html">Servicios</a>
           <a href="contact.html">Contacto</a>
           <a href="portfolio.html">Portafolio</a>
+          <a href="blog.html">Blog</a>
       </nav>
   </header>
 
