--- a/services.html
+++ b/services.html
@@ -6,6 +6,8 @@
     <title>Precios y Servicios - Duxi Studio</title>
     <link rel="stylesheet" href="styles/services.css">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
+    <title>Servicios y Precio</title>
 </head>
 <body>
     <!-- Navigation bar -->
