--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/contact.css">
-    <title>Home Page</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
+    <title>Contacto</title>
 
 </head>
 <body>
