--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>Equipo de Duxi Studio</title>
     <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
 </head>
 <body>
   <header class="navbar">
