--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Home Page</title>
-
+    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
+    <title>Portafolio</title>
 </head>
 <body>
 
