--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
         <a href="services.html">Servicios</a>
         <a href="contact.html">Contacto</a>
         <a href="portfolio.html">Portafolio</a>
+        <a href="blog.html">Blog</a>
     </nav>
 </header>
 
