--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,7 @@
             <a href="services.html">Servicios</a>
             <a href="contact.html">Contacto</a>
             <a href="portfolio.html">Portafolio</a>
+            <a href="blog.html">Blog</a>
         </nav>
     </header>
     <!-- MAIN GRID -->
