changed post1 title

--- a/post1.html
+++ b/post1.html
@@ -25,7 +25,7 @@
   </header>
   <div class="grid-container">
     <div class="container">
-        <h1>¿Por Qué los Empresarios en México Deberían Crear una App para su Negocio?</h1>
+        <h1>¿Por Qué los Empresarios Mexicanos Deberían Crear una App para su Negocio?</h1>
     
         <p class="paragraph">En un mercado en constante evolución como el mexicano, adaptarse a las nuevas tecnologías se ha vuelto esencial para la supervivencia y el crecimiento de las empresas, sin importar su tamaño. Las aplicaciones móviles han dejado de ser una herramienta exclusiva de grandes corporaciones tecnológicas y se han convertido en un recurso fundamental para cualquier negocio que busque aumentar su competitividad, fidelizar clientes y optimizar sus operaciones.</p>
     
