alt text on images

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
   <header class="navbar">
     <div class="logo">
-        <img class="logo" src="images/logo/purple (2).png">
+        <img class="logo" src="images/logo/purple (2).png" alt="logo">
     </div>
     <nav>
         <a href="index.html">Inicio</a>
@@ -26,22 +26,22 @@
     <main>
         <section class="team">
             <div class="member">
-                <img class="team-pic" src="images/images/Helga Gaona.jpeg">
+                <img class="team-pic" src="images/images/Helga Gaona.jpeg" alt="Helga Gaona">
                 <h2>Helga</h2>
                 <p><strong>Rol:</strong> Diseño UI/UX</p>
-                <p><strong>Email:</strong> <a class="mail" href="mailto:helga@dexi.com">helga@duxistudio.com </a></p>
+                <p><strong>Email:</strong> <a class="mail" href="mailto:helgacamin@gmail.com">helga@duxistudio.com </a></p>
             </div>
             <div class="member">
-                 <img class="team-pic" src="images/images/kim.png">
+                 <img class="team-pic" src="images/images/kim.png" alt="Kim Josell">
                 <h2>Kim Josell</h2>
                 <p><strong>Rol:</strong> Programación & Base de Datos</p>
-                <p><strong>Email:</strong> <a class="mail" href="mailto:kim@dexi.com">kim@duxistudio.com </a></p>
+                <p><strong>Email:</strong> <a class="mail" href="mailto:kim@dexi.com"></a></p>
             </div>
             <div class="member">
-                <img class="team-pic" src="images/images/angelo.png">
+                <img class="team-pic" src="images/images/angelo.png" alt="Angelo Gaona">
                 <h2>Angelo</h2>
                 <p><strong>Rol:</strong> Programación</p>
-                <p><strong>Email:</strong> <a class="mail" href="mailto:angelo@dexi.com">angelo@duxistudio.com </a></p>
+                <p><strong>Email:</strong> <a class="mail" href="mailto:angelo@dexi.com"></a></p>
             </div>
         </section>
     </main>
