--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation bar -->
     <header class="navbar">
       <div class="logo">
-          <img class="logo" src="images/logo/purple (2).png">
+          <img class="logo" src="images/logo/purple (2).png" alt="logo">
       </div>
       <nav>
           <a href="index.html">Inicio</a>
@@ -62,7 +62,7 @@
   <!-- Features section -->
   <section class="features" id="services">
       <div class="feature-item">
-          <img class="icon" src="images/images/icons/shopicon-black.svg">
+          <img class="icon" src="images/images/icons/shopicon-black.svg" alt="shopping bag icon">
           <h3>Apps para e-commerce</h3>
           <p>Impulsa tus ventas en línea con apps personalizadas que optimizan la experiencia de compra y aumentan tu alcance.</p>
       </div>
@@ -87,19 +87,12 @@
               </div>
           </span>
           <div id="contain">
-              <img id="computer" src="images/images/computer.png">
-              <img class="services" src="images/images/alimentos.webp">
-              <img class="services" src="images/images/belleza.webp">
-              <img class="services" src="images/images/electronica.webp">
-              <img class="services" src="images/images/jardineria.webp">
+              <img id="computer" src="images/images/computer.png" alt="Computer Services">
+              <img class="services" src="images/images/alimentos.webp" alt="Food Services">
+              <img class="services" src="images/images/belleza.webp" alt="Beauty Services">
+              <img class="services" src="images/images/electronica.webp" alt="Electronic Services">
+              <img class="services" src="images/images/jardineria.webp" alt="Gardering Services">
           </div>
-          <!--div id="homegallery">
-              <img class="services" src="images/images/alimentos.webp">
-              <img class="services" src="images/images/belleza.webp">
-              <img class="services" src="images/images/electronica.webp">
-              <img class="services" src="images/images/jardineria.webp">
-          </div>-->
-
       </div>
   
   </section>
