--- a/post3.html
+++ b/post3.html
@@ -12,7 +12,7 @@
         <!-- Navigation bar -->
     <header class="navbar">
       <div class="logo">
-          <img class="logo" src="images/logo/purple (2).png">
+          <img class="logo" src="images/logo/purple (2).png" alt="logo">
       </div>
       <nav>
           <a href="index.html">Inicio</a>
@@ -65,17 +65,17 @@
     <div class="side-container">
         <div class="otros-posts">Otros Posts</div>
         <div class="recommendation">
-            <img class="miniatura" src="images/images/blog/post2.jpeg">
+            <img class="miniatura" src="images/images/blog/post2.jpeg" alt="Money">
             <h3>¿Cómo se destina mi presupuesto para crear mi App?</h3>
             <a href="post2.html" class="read">Leer más</a>
         </div>
         <div class="recommendation">
-            <img class="miniatura" src="images/images/blog/post1.png">
+            <img class="miniatura" src="images/images/blog/post1.png" alt="Mobile App">
             <h3>¿Por qué crear una App para mi negocio?</h3>
             <a href="post1.html" class="read">Leer más</a>
         </div>
         <div class="recommendation">
-            <img class="miniatura" src="images/images/blog/post3.png">
+            <img class="miniatura" src="images/images/blog/post3.png" alt="Mobile App">
             <h3>¿Cómo determinar si necesito una App?</h3>
             <a href="post3.html" class="read">Leer más</a>
         </div>
