--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!-- Navigation bar -->
     <header class="navbar">
         <div class="logo">
-            <img class="logo" src="images/logo/purple (2).png">
+            <img class="logo" src="images/logo/purple (2).png" alt="logo">
         </div>
         <nav>
             <a href="index.html">Inicio</a>
