--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <!-- Navigation bar -->
     <header class="navbar">
         <div class="logo">
-            <img class="logo" src="images/logo/purple (2).png">
+            <img class="logo" src="images/logo/purple (2).png" alt="logo">
         </div>
         <nav>
             <a href="index.html">Inicio</a>
@@ -30,7 +30,7 @@
         <span class="grid-container">
             <div class="item-portfolio">
                 <a href="https://apps.apple.com/mx/app/maraton-de-seguros/id6736657250?platform=iphone">
-                    <img class="images" src="images/images/maraton.png">
+                    <img class="images" src="images/images/maraton.png" alt="Maraton de Seguros">
                     <div class="overlay">
                     <div class="text">Maraton de Seguros</div>
                     <div class="text2">Aplicacion de Trivia</div>
@@ -40,7 +40,7 @@
             </div>
             <div class="item-portfolio">
                 <a href="https://fhferreterias.com/?srsltid=AfmBOooVvcOt4IkDRBcOdhN1y--y2DeG27d4BNcUCUVFTYnMQHy3Ycix">
-                    <img class="images" src="images/images/fh ferreterias.png">
+                    <img class="images" src="images/images/fh ferreterias.png" alt="FH Ferreterias">
                     <div class="overlay">
                         <div class="text">FH Ferreterias Website</div>
                         <div class="text2">Tienda en Linea</div>
@@ -49,7 +49,7 @@
             </div>
             <div class="item-portfolio">
                 <a href="https://apps.apple.com/mx/app/maraton-de-seguros/id6736657250?platform=iphone">
-                    <img class="images" src="images/images/sr construccion.png">
+                    <img class="images" src="images/images/sr construccion.png" alt="Sr. Construccion">
                     <div class="overlay">
                         <div class="text">Sr Construccion</div>
                         <div class="text2">Tienda en linea & App de Delivery</div>
@@ -58,7 +58,7 @@
             </div>
             <div class="item-portfolio">
                 <a href="https://apps.apple.com/mx/app/maraton-de-seguros/id6736657250?platform=iphone">
-                    <img class="images" src="images/images/ameif.png">
+                    <img class="images" src="images/images/ameif.png" alt="AMEIF">
                     <div class="overlay">
                         <div class="text">AMEIF</div>
                         <div class="text2">Red Social para Influencers y Empresas</div>
@@ -67,7 +67,7 @@
             </div>
             <div class="item-portfolio">
                 <a href="https://apps.apple.com/mx/app/maraton-de-seguros/id6736657250?platform=iphone">
-                    <img class="images" src="images/images/tecsellent.png">
+                    <img class="images" src="images/images/tecsellent.png" alt="Tecsellent">
                     <div class="overlay">
                         <div class="text">Tecsellent Group</div>
                         <div class="text2">Tienda en Linea</div>
@@ -76,7 +76,7 @@
             </div>
             <div class="item-portfolio">
                 <a href="https://apps.apple.com/mx/app/maraton-de-seguros/id6736657250?platform=iphone">
-                    <img class="images" src="images/images/invitashopping.png">
+                    <img class="images" src="images/images/invitashopping.png" alt="InvitaShopping">
                     <div class="overlay">
                         <div class="text">Invitashopping</div>
                         <div class="text2">Marketplace</div>
