--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4S00WHTVNV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4S00WHTVNV');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
@@ -27,7 +36,7 @@
     </header>
 
     <div class="container">
-        <div class="form">
+        <form class="form" action="https://formsubmit.co/themadistudio@gmail.com" method="POST">
             <h1>Contáctanos</h1>
             <label for="name">Nombre Completo:</label>
             <input type="text" id="name" name="name" required>
@@ -38,11 +47,11 @@
             <label for="phone">WhatsApp:</label>
             <input type="tel" id="tel" name="tel" required>
 
-            <label for="message">Mensaje:</label>
+            <label for="message">Describe tu proyecto:</label>
             <textarea id="message" name="message" required></textarea>
             
             <button type="submit">Enviar Mensaje</button>
-        </div>
+        </form>
 
 
     </div>
