--- a/post2.html
+++ b/post2.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-528569381"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-528569381');
+</script>
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4S00WHTVNV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
