gracias por thankyou page

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
             <textarea id="message" name="message" required></textarea>
             
             <button type="submit">Enviar Mensaje</button>
-            <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+            <input type="hidden" name="_next" value="https://duxistudio.com/gracias.html">
         </form>
 
 
