added email response

--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,7 @@
             
             <button type="submit">Enviar Mensaje</button>
             <input type="hidden" name="_next" value="https://duxistudio.com/gracias.html">
+            <input type="hidden" name="_autoresponse" value="¡Gracias! Hemos recibido tu email. Recibirás una respuesta en menos de 10 horas.">
         </form>
     </div>
 
