--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
             <textarea id="message" name="message" required></textarea>
             
             <button type="submit">Enviar Mensaje</button>
-            <input type="hidden" name="_next" value="https://duxistudio.com/gracias.html">
+            <input type="hidden" name="_next" value="https://google.com">
             <input type="hidden" name="_autoresponse" value="¡Gracias! Hemos recibido tu email. Recibirás una respuesta en menos de 10 horas.">
         </form>
     </div>
