--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,7 @@
             <textarea id="message" name="message" required></textarea>
             
             <button type="submit">Enviar Mensaje</button>
-            <input type="hidden" name="_next" value="https://google.com">
-            <input type="hidden" name="_autoresponse" value="¡Gracias! Hemos recibido tu email. Recibirás una respuesta en menos de 10 horas.">
+            <input onclick="window.location.href = 'https://duxistudio.com/gracias.html';" type="submit" value="Submit request" />
         </form>
     </div>
 
