--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,8 @@
 
             <label for="message">Describe tu proyecto:</label>
             <textarea id="message" name="message" required></textarea>
-            
             <button type="submit">Enviar Mensaje</button>
-            <input onclick="window.location.href = 'https://duxistudio.com/gracias.html';" type="submit" value="Submit request" />
+            <input type="hidden" name="_next" value="https://duxistudio.com/gracias.html">
         </form>
     </div>
 
