--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 <body>
   <header class="navbar">
     <div class="logo">
-        <img class="logo" src="images/logo/purple (2).png" alt="logo">
+        <img class="logo" src="images/logo/dark.png" alt="logo"> <!-- Fixed space issue -->
     </div>
     <nav>
         <a href="index.html">Inicio</a>
@@ -42,26 +42,33 @@
         <a href="blog.html">Blog</a>
     </nav>
 </header>
-
     <main>
-        <section class="team">
-            <div class="member">
-                <img class="team-pic" src="images/images/Helga Gaona.jpeg" alt="Helga Gaona">
-                <h2>Helga</h2>
-                <p><strong>Rol:</strong> Diseño UI/UX</p>
+        <div class="banner">
+            <div class="banner-text">
+              <h1>Trabaja con Nosotros</h1>
+              <p>Diseño + Programación en un solo plan</p>
+              <div class="bottom">
+                <a class="button1" href="contact.html">Comenzar</a>
             </div>
-            <div class="member">
-                 <img class="team-pic" src="images/images/kim.png" alt="Kim Josell">
-                <h2>Kim Josell</h2>
-                <p><strong>Rol:</strong> Programación & Base de Datos</p>
-        
             </div>
-            <div class="member">
-                <img class="team-pic" src="images/images/angelo.png" alt="Angelo Gaona">
-                <h2>Angelo</h2>
-                <p><strong>Rol:</strong> Programación</p>
+        </div>
+        <div class="container">
+            <div class="text-container">
+                <div class="text">
+                <h1>¿Por qué elegirnos?</h1>
+                <ol>
+                    <li>Diseño centrado en el usuario: Creamos experiencias digitales que combinan funcionalidad y estética para maximizar resultados.</li>
+                    <li>Tecnología a la vanguardia: Aplicamos las mejores prácticas y tecnologías más recientes para garantizar soluciones efectivas y escalables.</li>
+                    <li>Compromiso total: Nos convertimos en aliados estratégicos de nuestros clientes, colaborando en cada paso del camino para superar expectativas.</li>
+                </ol> <!-- Removed <br> tags from inside the <ol> -->
+                </div>
+                <h2>Nuestra misión es transformar ideas en soluciones digitales que impulsen el éxito de las pequeñas y medianas empresas en México y más allá.</h2>
             </div>
-        </section>
+            <div class="image-container">
+                <img src="images/images/tubik.png" alt="Tubik Creator">
+            </div>
+        </div>
+      
     </main>
     <!-- Footer -->
     <footer class="footer">
