--- a/gracias.html
+++ b/gracias.html
@@ -34,7 +34,7 @@
     <!-- Navigation bar -->
     <header class="navbar">
         <div class="logo">
-            <img class="logo" src="images/logo/purple (2).png" alt="logo">
+            <img class="logo" src="images/logo/dark.png" alt="logo">
         </div>
         <nav>
             <a href="index.html">Inicio</a>
@@ -47,7 +47,7 @@
     </header>
 
     <div class="container"> 
-        <img class="check-icon" src="images/images/icons/check-icon.svg">
+        <img class="check-icon" src="images/images/icons/check-icon.svg" alt="icon-verified">
             <h1>¡Gracias!</h1>
             <div class="gracias">¡Tu mensaje se ha enviado!
             <br><br>
