--- a/portfolio.html
+++ b/portfolio.html
@@ -4,23 +4,22 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5530498496547836"
      crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-528569381"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-528569381"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'AW-528569381');
-</script>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4S00WHTVNV"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+      gtag('config', 'AW-528569381');
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4S00WHTVNV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-4S00WHTVNV');
-</script>
+      gtag('config', 'G-4S00WHTVNV');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/portfolio.css">
@@ -29,11 +28,10 @@
     <title>Portafolio</title>
 </head>
 <body>
-
     <!-- Navigation bar -->
     <header class="navbar">
         <div class="logo">
-            <img class="logo" src="images/logo/purple (2).png" alt="logo">
+            <img class="logo" src="images/logo/dark.png" alt="logo">
         </div>
         <nav>
             <a href="index.html">Inicio</a>
@@ -47,20 +45,19 @@
     <!-- MAIN GRID -->
     <h1>Conoce a nuestros clientes</h1>
     <section>
-        <span class="grid-container">
+        <!-- Section Heading added -->
+        <div class="grid-container"> <!-- Changed from <span> to <div> -->
             <div class="item-portfolio">
                 <a href="https://apps.apple.com/mx/app/maraton-de-seguros/id6736657250?platform=iphone">
                     <img class="images" src="images/images/maraton.png" alt="Maraton de Seguros">
-                    <div class="overlay">
+                    <div class="overlay"></div>
                     <div class="text">Maraton de Seguros</div>
                     <div class="text2">Aplicacion de Trivia</div>
-                </div>
-            </a>
-                </div>
-            </div>
+                </a>
+            </div>    
             <div class="item-portfolio">
                 <a href="https://fhferreterias.com/">
-                    <img class="images" src="images/images/fh ferreterias.png" alt="FH Ferreterias">
+                    <img class="images" src="images/images/fhferreterias.png" alt="FH Ferreterias">
                     <div class="overlay">
                         <div class="text">FH Ferreterias Website</div>
                         <div class="text2">Tienda en Linea</div>
@@ -103,13 +100,12 @@
                     </div>
                 </a>
             </div>
-        </span>
+        </div> <!-- Closed the div -->
     </section>
 
     <!-- Footer -->
     <footer class="footer">
         <p>2024 duxi studio</p>
     </footer>
-
 </body>
 </html>
