--- a/services.html
+++ b/services.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5530498496547836"
-     crossorigin="anonymous"></script>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-528569381"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-528569381');
-</script>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4S00WHTVNV"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4S00WHTVNV');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Precios y Servicios - Duxi Studio</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Add other meta tags or links here -->
     <link rel="stylesheet" href="styles/services.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <title>Servicios y Precio</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5530498496547836"
+     crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-528569381"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'AW-528569381');
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4S00WHTVNV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-4S00WHTVNV');
+    </script>
 </head>
 <body>
     <!-- Navigation bar -->
     <header class="navbar">
         <div class="logo">
-            <img class="logo" src="images/logo/purple (2).png" alt="logo">
+            <img class="logo" src="images/logo/dark.png" alt="Duxi Studio logo">
         </div>
         <nav>
             <a href="index.html">Inicio</a>
@@ -44,66 +45,135 @@
             <a href="blog.html">Blog</a>
         </nav>
     </header>
-    <main>
-        <h1>¿Cómo lo hacemos?</h1>
-        <section>
-            <div class="grid-steps">
-                <div class="step">
-                    <img class="icon" src="images/images/icons/icons8-idea-100.png" alt="online-order"/>
-                    <h2>1. Idea</h2>
-                    <p>Nos reunimos contigo para discutir tu proyecto y planear cada uno de los pasos.</p>
-                </div>
-                <div class="step">
-                    <img class="icon" src="images/images/icons/icons8-prototipo-100.png" alt="online-order"/>
-                    <h2>2. Prototipo</h2>
-                    <p>Creamos un prototipo y realizamos cambios necesarios hasta que estés satisfecho.</p>
-                </div>
-                <div class="step">
-                    <img class="icon" src="images/images/icons/icons8-diseño-100 (1).png" alt="online-order"/>
-                    <h2>3. Diseño</h2>
-                    <p>El experto en diseño (UI) y funcionalidad (UX) generará el diseño final del proyecto.</p>
-                </div>
-                <div class="step">
-                    <img class="icon" src="images/images/icons/icons8-modo-desarrollador-100.png" alt="online-order"/>
-                    <h2>4. Desarrollo</h2>
-                    <p>Necesitamos tu aprobación del prototipo, aceptación de la cotización y pago del anticipo.</p>
-                </div>
-                <div class="step">
-                    <img class="icon" src="images/images/icons/icons8-producción-terminada-100.png" alt="online-order"/>
-                    <h2>5. Entrega</h2>
-                    <p>Publicaremos tu aplicación en las tiendas Apple Store y Google Play Store adecuadamente.</p>
-                </div>
-                
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Potencía tus ideas con el desarrollo de aplicaciones y sitios web</h1>
+        <p>Custom solutions for websites, marketplaces, apps, and more.</p>
+        <div class="cta-buttons">
+            <a href="contact.html">
+                <button>Cotizar Ahora</button>
+            </a>
+            <a href="portfolio.html">
+                <button>Ver Portafolio</button>
+            </a>
+        </div>
+    </section>
+
+    <!-- Web Development Section -->
+    <section class="services-section">
+        <h2>Servicios de Desarrollo Web</h2>
+        <p>Construyendo Sitios Web que Cautivan y Convierten</p>
+        <div class="services-grid">
+            <div class="service1">
+                <img src="images/images/icons/icons8-compras-móviles-100.png" alt="Icono de compras móviles">
+                <h3>Desarrollo de Marketplaces</h3>
+                <p>Creación de plataformas para conectar vendedores y compradores fácilmente.</p>
             </div>
-        </section>
-        <h1>Precios</h1>
-        <section class="serviced">
-            <div class="servicio">
-                <h2>Diseño UI/UX</h2>
-                <br>
-                <p>Creando interfaces y experiencias de usuario intuitivas y atractivas para tus aplicaciones.</p>
-                <br>
-                <p class="price">desde $5,230</p>
+            <div class="website-design"></div>
+            <div class="service2">
+                <img src="images/images/icons/icons8-prototipo-100.png" alt="Icono de prototipo">
+                <h3>Landing Pages</h3>
+                <p>Diseños atractivos para captar clientes y mejorar conversiones.</p>
             </div>
-            <div class="servicio">
-                <h2>Desarrollo Web</h2>
-                <br>
-                <p>Construyendo sitios web responsivos y funcionales adaptados a las necesidades de tu negocio.</p>
-                <br>
-                <p class="price">desde $5,450</p>
+            <div class="service3">
+                <img src="images/images/icons/icons8-spreadsheet-file-100.png" alt="Icono de archivo de hoja de cálculo">
+                <h3>Portfolios Virtuales</h3>
+                <p>Muestras profesionales para destacar proyectos y habilidades creativas.</p>
             </div>
-            <div class="servicio">
-                <h2>Desarrollo de<br>Aplicaciones Móviles</h2>
-                <br>
-                <p>Diseñando y desarrollando aplicaciones móviles para plataformas iOS y Android.</p>
-                <br>
-                <p class="price">desde $15,600</p>
+            <div class="service4">
+                <img src="images/images/icons/icons8-ecommerce-app-100.png" alt="Icono de aplicación de ecommerce">
+                <h3>Soluciones para e-commerce</h3>
+                <p>Tiendas en línea personalizadas para impulsar ventas y marcas.</p>
             </div>
-        </section>  
-        <!-- Footer -->
-  <footer class="footer">
-    <p>2024 duxi studio</p>
-</footer>
-    </main>
+        </div>
+        <br>
+        <a href="portfolio.html">
+            <button>Ver más</button>
+        </a>
+    </section>
+
+    <!-- App Development Section -->
+    <section class="services-section">
+        <h2>Servicios de Desarrollo de Apps</h2>
+        <p>Apps Innovadoras para mejores Experiencias de Usuario</p>
+        <div class="services-grid">
+            <div class="service1">
+                <img class="icon-step" src="images/images/icons/icons8-joystick-100.png" alt="Icono de joystick">
+                <h3>Aplicaciones de Juegos</h3>
+                <p>Desarrollamos apps divertidas y emocionantes para videojuegos móviles.</p>
+            </div>
+            <div class="service2">
+                <img class="icon-step" src="images/images/icons/icons8-examen-100.png" alt="Icono de examen">
+                <h3>Aplicaciones de Cuestionarios</h3>
+                <p>Plataformas interactivas para crear y responder cuestionarios educativos.</p>
+            </div>
+            <div class="app-design"></div>
+            <div class="service3">
+                <img class="icon-step" src="images/images/icons/icons8-pago-móvil-de-compras-100.png" alt="Icono de pago móvil">
+                <h3>Mercados Móviles</h3>
+                <p>Aplicaciones para comprar y vender productos desde tu teléfono.</p>
+            </div>
+            <div class="service4">
+                <img class="icon-step" src="images/images/icons/icons8-formación-100.png" alt="Icono de formación">
+                <h3>Herramientas Educativas</h3>
+                <p>Recursos digitales para facilitar el aprendizaje en diversas áreas.</p>
+            </div>
+        </div>
+        <br>
+        <a href="portfolio.html">
+            <button>Ver más</button>
+        </a>
+    </section>
+
+    <!-- Our Process Section -->
+    <section class="process">
+        <h2>Nuestro Proceso</h2>
+        <p>Como trabajamos: desde el Concepto hasta el Lanzamiento</p>
+        <br>
+        <div class="process-steps">
+            <div class="step">
+                <img class="icon-step" src="images/images/icons/icons8-video-conference-100.png" alt="Icono de videoconferencia">
+                <h3>1. Consultoría</h3>
+                <p>Trabajamos contigo para comprender tus necesidades y objetivos, definiendo un plan claro para tu proyecto.</p>
+            </div>
+            <div class="step">
+                <img class="icon-step" src="images/images/icons/icons8-strategy-100.png" alt="Icono de estrategia">
+                <h3>2. Planificación</h3>
+                <p>Diseñamos estrategias detalladas y un cronograma para garantizar el éxito en cada etapa del desarrollo.</p>
+            </div>
+            <div class="step">
+                <img class="icon-step" src="images/images/icons/icons8-modo-desarrollador-100.png" alt="Icono de modo desarrollador">
+                <h3>3. Desarrollo</h3>
+                <p>Construimos tu solución utilizando las mejores prácticas y tecnologías adaptadas a tus requerimientos.</p>
+            </div>
+            <div class="step">
+                <img class="icon-step" src="images/images/icons/icons8-testflight-100.png" alt="Icono de prueba">
+                <h3>4. Testing & Feedback</h3>
+                <p>Realizamos pruebas exhaustivas y ajustamos detalles según tu retroalimentación para asegurar la calidad.</p>
+            </div>
+            <div class="step">
+                <img class="icon-step" src="images/images/icons/icons8-audit-100.png" alt="Icono de auditoría">
+                <h3>5. Launch & Support</h3>
+                <p>Implementamos tu proyecto con éxito y brindamos soporte continuo para mantenerlo en óptimas condiciones.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Call to Action Section -->
+    <section class="cta">
+        <h2>¿Listo para empezar tu proyecto?</h2>
+        <p>Demos vida a tus ideas</p>
+        <div class="cta-buttons">
+            <a href="contact.html">
+                <button>Cotizar</button>
+                </a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>2024 duxi studio</p>
+    </footer>
 </body>
 </html>
