--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
     <!-- Navigation bar -->
     <header class="navbar">
         <div class="logo">
-            <img class="logo" src="images/logo/purple (2).png" alt="logo">
+            <img class="logo" src="images/logo/dark.png" alt="logo">
         </div>
         <nav>
             <a href="index.html">Inicio</a>
@@ -43,24 +43,26 @@
             <a href="blog.html">Blog</a>
         </nav>
     </header>
-    <div class="grid-container">
-        <div class="grid-item">
-            <img src="images/images/blog/post1.png" alt="mobile apps">
-            <h2>¿Por qué crear una App para mi negocio?</h2>
-            <p>Descubre cómo una app puede ayudar a tu negocio a competir, fidelizar clientes y adaptarse a las tendencias tecnológicas en el mercado mexicano.</p>
-            <a href="post1.html" class="read">Leer más</a>
-        </div>
-        <div class="grid-item">
-            <img src="https://images.pexels.com/photos/164661/pexels-photo-164661.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="money">
-            <h2>¿Cómo se destina mi presupuesto para crear mi App?</h2>
-            <p>Conoce cómo distribuir eficazmente tu presupuesto en cada fase del desarrollo de una aplicación móvil para obtener los mejores resultados sin malgastar recursos.</p>
-            <a href="post2.html" class="read">Leer más</a>
-        </div>
-        <div class="grid-item">
-            <img src="https://cdn.dribbble.com/userupload/15726139/file/original-3f660d8d55ed9ccbee81c2024009268c.png?resize=752x" alt="mobile apps">
-            <h2>¿Cómo determinar si necesito una App?</h2>
-            <p>Analiza si tu negocio realmente se beneficiaría de una app móvil con estos sencillos puntos que te ayudarán a tomar una decisión informada y estratégica.</p>
-            <a href="post3.html" class="read">Leer más</a>
+    <div class="section">
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="images/images/blog/post1.png" alt="mobile apps">
+                <h2>¿Por qué crear una App para mi negocio?</h2>
+                <p>Descubre cómo una app puede ayudar a tu negocio a competir, fidelizar clientes y adaptarse a las tendencias tecnológicas en el mercado mexicano.</p>
+                <a href="post1.html" class="read">Leer más</a>
+            </div>
+            <div class="grid-item">
+                <img src="https://images.pexels.com/photos/164661/pexels-photo-164661.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="money">
+                <h2>¿Cómo se destina mi presupuesto para crear mi App?</h2>
+                <p>Conoce cómo distribuir eficazmente tu presupuesto en cada fase del desarrollo de una aplicación móvil para obtener los mejores resultados sin malgastar recursos.</p>
+                <a href="post2.html" class="read">Leer más</a>
+            </div>
+            <div class="grid-item">
+                <img src="https://cdn.dribbble.com/userupload/15726139/file/original-3f660d8d55ed9ccbee81c2024009268c.png?resize=752x" alt="mobile apps">
+                <h2>¿Cómo determinar si necesito una App?</h2>
+                <p>Analiza si tu negocio realmente se beneficiaría de una app móvil con estos sencillos puntos que te ayudarán a tomar una decisión informada y estratégica.</p>
+                <a href="post3.html" class="read">Leer más</a>
+            </div>
         </div>
     </div>
     <!-- Footer -->
