--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,13 @@
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <title>Contacto</title>
-
 </head>
 <body>
 
     <!-- Navigation bar -->
     <header class="navbar">
         <div class="logo">
-            <img class="logo" src="images/logo/purple (2).png" alt="logo">
+            <img class="logo" src="images/logo/dark.png" alt="logo"> <!-- Cambié el nombre de la imagen para evitar el espacio -->
         </div>
         <nav>
             <a href="index.html">Inicio</a>
@@ -45,31 +44,32 @@
             <a href="blog.html">Blog</a>
         </nav>
     </header>
+        <div class="content">
+            <div class="container">
+                <form class="form" action="https://formsubmit.co/themadistudio@gmail.com" method="POST">
+                    <h1>Contáctanos</h1>
+                    <br>
+                    <h3>Descríbenos tu proyecto y te contactamos en menos de 10 horas</h3>
+                    <br>
+                    <label for="name">Nombre Completo:</label>
+                    <input type="text" id="name" name="name" required>
 
-    <div class="container">
-        <form class="form" action="https://formsubmit.co/themadistudio@gmail.com" method="POST">
-    
-            <h1>Contáctanos</h1>
-            <label for="name">Nombre Completo:</label>
-            <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+                    <label for="tel">WhatsApp:</label> <!-- Corregí el atributo for para que coincida con el id del input -->
+                    <input type="tel" id="tel" name="tel" required>
 
-            <label for="phone">WhatsApp:</label>
-            <input type="tel" id="tel" name="tel" required>
-
-            <label for="message">Describe tu proyecto:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Enviar Mensaje</button>
-            <input type="hidden" name="_next" value="https://duxistudio.com/gracias.html">
-        </form>
-    </div>
-
-        <!-- Footer -->
-        <footer class="footer">
-            <p>2024 duxi studio</p>
-        </footer>    
-    </body>
-    </html>
-    
+                    <label for="message">Describe tu proyecto:</label>
+                    <textarea id="message" name="message" required></textarea>
+                    <button type="submit">Enviar Mensaje</button>
+                    <input type="hidden" name="_next" value="https://duxistudio.com/gracias.html">
+                </form>
+            </div>
+        </div>    
+    <!-- Footer -->
+    <footer class="footer">
+        <p>2024 duxi studio</p>
+    </footer>    
+</body>
+</html>
