--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5530498496547836"
      crossorigin="anonymous"></script>
@@ -26,51 +26,32 @@
     <link rel="stylesheet" href="styles/index.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <title>Home Page</title>
-
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/11.0.1/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/11.0.1/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/11.0.1/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/11.0.1/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/11.0.1/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/11.0.1/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/11.0.1/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/11.0.1/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/11.0.1/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/11.0.1/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
   </head>
   <body>
     <!-- Navigation bar -->
     <header class="navbar">
       <div class="logo">
-          <img class="logo" src="images/logo/purple (2).png" alt="logo">
+          <img class="logo" src="/images/logo/dark.png" alt="logo">
       </div>
-      <nav>
+      <div class="nav">
           <a href="index.html">Inicio</a>
           <a href="about.html">Nosotros</a>
           <a href="services.html">Servicios</a>
           <a href="contact.html">Contacto</a>
           <a href="portfolio.html">Portafolio</a>
           <a href="blog.html">Blog</a>
-      </nav>
+      </div>
       
   </header>
 
   <!-- Hero section -->
   <section class="hero" id="home">
       <video id="videoui" autoplay playsinline muted loop>
-          <source src="images/images/Shakuro UI-UX video.mp4" type="video/mp4">
-          Your browser does not support the video tag.
+          <source src="/images/images/Shakuro%20UI-UX%20video.mp4" type="video/mp4">
+          Tu navegador no soporta el tag de video.
         </video>
       <div id="container">
-      <span><h1>Desarrollamos<br> tu App Movil</h1><p>Llevamos tu página web al siguiente nivel con tu propia App</p>
+      <span><h1>Desarrollamos tu App Movil</h1><p>Llevamos tu página web al siguiente nivel con tu propia App</p>
       </span>
       <div class="bottom">
           <a class="button1" href="contact.html">Quiero mi App</a>
@@ -81,14 +62,14 @@
   <!-- Features section -->
   <section class="features" id="services">
       <div class="feature-item">
-          <img class="icon" src="images/images/icons/shopicon-black.svg" alt="shopping bag icon">
+          <img class="icon" src="https://img.icons8.com/material-outlined/100/online-order.png" alt="shopping bag icon">
           <h3>Apps para e-commerce</h3>
           <p>Impulsa tus ventas en línea con apps personalizadas que optimizan la experiencia de compra y aumentan tu alcance.</p>
       </div>
       <div class="feature-item">
           <img class="icon" src="https://img.icons8.com/material-outlined/100/online-order.png" alt="online-order"/>
           <h3>Apps para negocios digitales</h3>
-          <p>ransforma tu idea en una realidad digital. Desarrollamos apps a medida que potencian tu marca y te conectan con tu audiencia.</p>
+          <p>Transforma tu idea en una realidad digital. Desarrollamos apps a medida que potencian tu marca y te conectan con tu audiencia.</p>
       </div>
       <div class="feature-item">
           <img class="icon" src="https://img.icons8.com/pastel-glyph/100/color-palette.png" alt="color-palette">
@@ -100,64 +81,24 @@
   <!-- Hero2 section -->
   <section class="hero2" id="home2">
           <span>
-              <h1>Desarrollamos tu<br>Sitio Web</h1>B2B & B2C ¡Tú lo sueñas, nosotros lo hacemos realidad!
+              <h1>Desarrollamos tu Sitio Web</h1>
+              <p>B2B & B2C ¡Tú lo sueñas, nosotros lo hacemos realidad!</p>
               <div class="bottom">
                   <a class="button1" href="contact.html">Quiero mi Sitio Web</a>
               </div>
           </span>
           <div id="contain">
-              <img id="computer" src="images/images/computer.png" alt="Computer Services">
-              <img class="services" src="images/images/alimentos.webp" alt="Food Services">
-              <img class="services" src="images/images/belleza.webp" alt="Beauty Services">
-              <img class="services" src="images/images/electronica.webp" alt="Electronic Services">
-              <img class="services" src="images/images/jardineria.webp" alt="Gardering Services">
+              <img id="computer" src="/images/images/computer.png" alt="Computer Services">
+              <img class="services" src="/images/images/alimentos.webp" alt="Food Services">
+              <img class="services" src="/images/images/belleza.webp" alt="Beauty Services">
+              <img class="services" src="/images/images/electronica.webp" alt="Electronic Services">
+              <img class="services" src="/images/images/jardineria.webp" alt="Gardering Services">
           </div>
-      </div>
-  
   </section>
 
   <!-- Footer -->
   <footer class="footer">
       <p>2024 duxi studio</p>
   </footer>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
   </body>
 </html>
