--- a/gracias.html
+++ b/gracias.html
@@ -24,7 +24,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/gracias.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <title>Contacto</title>
 
