--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,24 @@
                     <button type="submit">Enviar Mensaje</button>
                     <input type="hidden" name="_next" value="https://duxistudio.com/gracias.html">
                 </form>
+            <div class="side-menu">
+                <div class="side-container">
+                    <div class="calc">
+                        <img src="images/images/icons/icons8-web-100.png">
+                        <h1>Calcula el Costo de <br>tu Página Web</h1>
+                        <p>Calcula el costo de tu Página Web</p>
+                        <br>
+                        <a class="calcular" href="calculadora-app.html">Calcular</a>
+                        <hr></hr>
+                        <img src="images/images/icons/icons8-dos-smartphones-100.png">
+                        <h1>Calcula el Costo de tu App Movil</h1>
+                        <p>Utiliza nuestra calculadora para tener una cotización aproximada del costo de tu proyecto</p>
+                        <br>
+                        <a class="calcular" href="calculadora-app.html">Calcular</a>
+                    </div>
+                </div>
+            </div>
+            
             </div>
         </div>    
     <!-- Footer -->
