--- a/calculadora-app.html
+++ b/calculadora-app.html
@@ -122,7 +122,7 @@
             <input type="hidden" name="maxPrice" id="maxPrice">
             <!-- Hidden Inputs for Selected Options -->
             <input type="hidden" name="selectedOptions" id="selectedOptions">
-            <input type="hidden" name="_next" value="https://duxistudio.com/gracias.html">  
+            <input type="hidden" name="_next" value="https://duxistudio.com/cotizacion-enviada.html">  
         </form>
         <div class="right-container">
             <div id="result">
