--- a/calculadora-web.html
+++ b/calculadora-web.html
@@ -93,7 +93,7 @@
             <input type="hidden" name="minPrice" id="minPrice">
             <input type="hidden" name="maxPrice" id="maxPrice">
             <!-- Redirect to a Thank You page -->
-            <input type="hidden" name="_next" value="https://duxistudio.com/gracias.html">
+            <input type="hidden" name="_next" value="https://duxistudio.com/cotizacion-enviada.html">
         </form>
         <div id="result">
             <p id="priceText"></p>
