--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                         <h1>Calcula el Costo de <br>tu Página Web</h1>
                         <p>Calcula el costo de tu Página Web</p>
                         <br>
-                        <a class="calcular" href="calculadora-app.html">Calcular</a>
+                        <a class="calcular" href="calculadora-web.html">Calcular</a>
                         <hr></hr>
                         <br>
                         <img src="images/images/icons/icons8-dos-smartphones-100.png">
