--- a/calculadora-web.html
+++ b/calculadora-web.html
@@ -95,10 +95,12 @@
             <!-- Redirect to a Thank You page -->
             <input type="hidden" name="_next" value="https://duxistudio.com/cotizacion-enviada.html">
         </form>
-        <div id="result">
-            <p id="priceText"></p>
-            <p id="additionalText"></p> <!-- This will display the custom text -->
-        </div>
+        <div class="right-container">
+            <div id="result">
+                <p id="priceText"></p>
+                <p id="additionalText"></p> <!-- This will display the custom text -->
+            </div>
+        </div>    
     </div>
 
     <script>
