--- a/contact.html
+++ b/contact.html
@@ -70,20 +70,27 @@
                     <div class="calc">
                         <img src="images/images/icons/icons8-web-100.png">
                         <h1>Calcula el Costo de <br>tu Página Web</h1>
-                        <p>Calcula el costo de tu Página Web</p>
+                        <p>Obtén un precio estimado de tu Website</p>
                         <br>
                         <a class="calcular" href="calculadora-web.html">Calcular</a>
-                        <hr></hr>
-                        <br>
+                    </div>
+                    <div class="calc">
                         <img src="images/images/icons/icons8-dos-smartphones-100.png">
                         <h1>Calcula el Costo de tu App Movil</h1>
-                        <p>Utiliza nuestra calculadora para tener una cotización aproximada del costo de tu proyecto</p>
+                        <p>Obtén un precio estimado de tu App</p>
                         <br>
                         <a class="calcular" href="calculadora-app.html">Calcular</a>
                     </div>
+                    <div class="calc">
+                        <img src="images/images/icons/icons8-hora-de-la-cita-100.png">
+                        <h1>Agenda una cita</h1>
+                        <p>Aterrizemos tu idea en 30 minutos</p>
+                        <br>
+                        <a class="calcular" href="calendar.html">Agendar</a>
+                    </div>
+
+                    </div>
                 </div>
-            </div>
-            
             </div>
         </div>    
     <!-- Footer -->
